--- a/WebDev/FireStore_Examples/nucampfire-rn/package.json
+++ b/WebDev/FireStore_Examples/nucampfire-rn/package.json
@@ -29,6 +29,7 @@
         "expo-notifications": "~0.14.0",
         "expo-secure-store": "~11.1.0",
         "expo-status-bar": "~1.2.0",
+        "firebase": "^10.6.0",
         "react": "17.0.1",
         "react-dom": "17.0.1",
         "react-native": "0.64.3",
